begin switching to node-localstorage

--- a/app/main.ejs
+++ b/app/main.ejs
@@ -6,6 +6,7 @@
   </head>
   <body>
     <app></app>
+    <script>const __root = __dirname</script>
     <!-- webpack builds are automatically injected -->
   </body>
 </html>
